[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/player_2D.gd" type="Script" id=1]
[ext_resource path="res://script/camera_2D.gd" type="Script" id=2]
[ext_resource path="res://script/scr_sprite_anim.gd" type="Script" id=3]
[ext_resource path="res://image/char/spr_cat_reset.png" type="Texture" id=4]
[ext_resource path="res://image/char/spr_cat_walk.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13, 13.875 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 320, 256 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
reset_tex = ExtResource( 4 )
walk_tex = ExtResource( 5 )

[node name="CS_HIT" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="SPR" type="Sprite" parent="Node2D"]
script = ExtResource( 3 )
run = true

[node name="player" type="Area2D" parent="."]

[node name="CS_AREA" type="CollisionShape2D" parent="player"]
shape = SubResource( 8 )

[node name="CAM" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 480
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[connection signal="stopped" from="Node2D/SPR" to="." method="_on_anim_stopped"]
[connection signal="area_entered" from="player" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="player" to="." method="_on_player_area_exited"]
